--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -4,44 +4,12 @@
             "name": "x64-Clang-Release",
             "generator": "Ninja",
             "configurationType": "Release",
-            "buildRoot": "${projectDir}\\out\\build\\${name}",
-            "installRoot": "${projectDir}\\out\\install\\${name}",
-            "cmakeCommandArgs": "-DCMAKE_CXX_FLAGS=\"/O3 /EHsc\"",
+            "buildRoot": "${projectDir}/out/build/${name}",
+            "installRoot": "${projectDir}/out/install/${name}",
+            "cmakeCommandArgs": "-DCMAKE_CXX_FLAGS=\"-O3\"",
             "buildCommandArgs": "",
             "ctestCommandArgs": "",
-            "inheritEnvironments": [ "clang_cl_x64_x64" ]
-        },
-        {
-            "name": "x64-Release",
-            "generator": "Ninja",
-            "configurationType": "Release",
-            "buildRoot": "${projectDir}\\out\\build\\${name}",
-            "installRoot": "${projectDir}\\out\\install\\${name}",
-            "cmakeCommandArgs": "",
-            "buildCommandArgs": "",
-            "ctestCommandArgs": "",
-            "inheritEnvironments": [ "msvc_x64_x64" ]
-        },
-        {
-            "name": "x64-Debug",
-            "generator": "Ninja",
-            "configurationType": "Debug",
-            "buildRoot": "${projectDir}\\out\\build\\${name}",
-            "installRoot": "${projectDir}\\out\\install\\${name}",
-            "cmakeCommandArgs": "",
-            "buildCommandArgs": "",
-            "ctestCommandArgs": "",
-            "inheritEnvironments": [ "msvc_x64_x64" ]
-        },
-        {
-            "name": "x64-Release-Assembly",
-            "generator": "Ninja",
-            "configurationType": "Release",
-            "buildRoot": "${projectDir}\\out\\build\\${name}",
-            "installRoot": "${projectDir}\\out\\install\\${name}",
-            "cmakeCommandArgs": "-DCMAKE_CXX_FLAGS=\"/O3 /FAs /EHsc\"",
-            "ctestCommandArgs": "",
-            "inheritEnvironments": [ "clang_cl_x64_x64" ]
+            "inheritEnvironments": [ "clang_x64"]
         }
     ]
 }
