--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -6,7 +6,7 @@
             "configurationType": "Release",
             "buildRoot": "${projectDir}\\out\\build\\${name}",
             "installRoot": "${projectDir}\\out\\install\\${name}",
-            "cmakeCommandArgs": "-DCMAKE_CXX_FLAGS=\"/O3 /EHsc\"",
+            "cmakeCommandArgs": "-DCMAKE_CXX_FLAGS=\" /O2 /EHsc -Wno-microsoft-include\"",
             "buildCommandArgs": "",
             "ctestCommandArgs": "",
             "inheritEnvironments": [ "clang_cl_x64_x64" ]
